--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
-  "functions": {
-    "api/*.php": {
-      "runtime": "vercel-php@0.7.3"
-    }
-  }
+  "rewrites": [
+    { "source": "/send.php", "destination": "/api/send.php" }
+  ]
 }
